samples/_failures_safe/1761664430_d403fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4368534.c: In function ‘main’:
./samples/SAFE/__tmp_e4368534.c:164:9: error: expected declaration or statement at end of input
  164 |         fprintf(stderr, "Error reading input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_e4368534.c:164:9: error: expected declaration or statement at end of input
